<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bttSchedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/bttSponsors"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/bttLocation"
            android:title="@string/location" />
        <item
            android:id="@+id/bttWorkshops"
            android:title="@string/workshops"
            />
        <item
            android:id="@+id/bttConduct"
            android:title="@string/conduct"
            />
        <item
            android:id="@+id/bttData"
            android:title="@string/data_promise"
            />
        <item
            android:id="@+id/bttTerms"
            android:title="@string/terms"
            />
    </group>
</menu>