<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="5dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:id="@+id/bttSchedule"
        style="@style/grayButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sponsors"
        android:id="@+id/bttSponsors"
        style="@style/grayButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/bttLocation"
        style="@style/grayButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workshops"
        android:id="@+id/bttWorkshops"
        style="@style/grayButton"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conduct"
        android:id="@+id/bttConduct"
        style="@style/grayButton"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:id="@+id/bttTerms"
        style="@style/grayButton"
        />

</LinearLayout>