<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:id="@+id/yourNameText"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/editText"
            android:layout_below="@id/yourNameText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/termsRow"
            android:layout_below="@+id/editText">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_to_have_fun"
                android:id="@+id/haveFunText"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsRow"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/begin_workshop"
            android:background="@drawable/yellow_button"
            android:padding="10pt"
            android:textColor="@color/gray"
            android:id="@+id/beginBtt"
            android:layout_marginTop="10pt"
            />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>